# rtc-streamer

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  README.md  config.toml
frontend/: INTEGRATION.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  geo.ts  index.css  index.ts  types.ts
frontend/src/components/: MetadataPanel.tsx  PlatformMap.tsx  StatsPanel.tsx  VideoPlayer.tsx
frontend/src/hooks/: useSignaling.ts  useWebRTC.ts
src/: config.rs  error.rs  main.rs
src/ingest/: mod.rs  mpegts_demuxer.rs  udp_receiver.rs
src/media/: audio_transcoder.rs  frame.rs  h264_parser.rs  klv_parser.rs  mod.rs  pipeline.rs
src/monitoring/: metrics.rs
src/signaling/: handlers.rs  messages.rs  mod.rs  server.rs
src/webrtc/: mod.rs  peer.rs  session_manager.rs  track_sender.rs
static/: index.html  player.js  style.css
static/assets/: index-Cjpc6ROk.css  index-mjNFv1Ot.js
