[package]
name = "rtc-streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
# WebRTC
webrtc = "0.11"
tokio = { version = "1.41", features = ["full"] }

# HTTP/WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Audio transcoding (not yet implemented - placeholder for future)
# symphonia = { version = "0.5", features = ["aac"] }
# opus = "0.3"

# Utilities
bytes = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
